# pokeagent-solution

./: .dockerignore  Dockerfile  ELITE_FOUR_RUN.md  START_HERE.md  meta_agent.py  meta_agent_daemon.py  milestone_config.json  play-docker.sh  play.sh  pyproject.toml  requirements.txt  run.py  run_emerald_ai.py  start_all.sh
.venv-x86/: pyvenv.cfg
agent/: __init__.py  simple.py
docs/: index.html
docs/static/css/: main.css
docs/static/js/: main.js
pokemon_env/: emulator.py
server/: client.py
utils/: milestone_manager.py
